// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders correctly 1`] = `
<DocumentFragment>
  <div
    class="css-1gzl4dy"
    data-testid="header"
  >
    <div
      class="css-1k3povc"
    >
      <div
        class="chakra-stack css-ahthbn"
        data-testid="left-content"
      >
        <h1>
          Left
        </h1>
      </div>
      <div
        data-testid="right-content"
      >
        <h1>
          Right
        </h1>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Header /> renders correctly only left content: OnlyLeftContent 1`] = `
<DocumentFragment>
  <div
    class="css-1gzl4dy"
    data-testid="header"
  >
    <div
      class="css-1k3povc"
    >
      <div
        class="chakra-stack css-ahthbn"
        data-testid="left-content"
      >
        <h1>
          Left
        </h1>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Header /> renders correctly only right content: OnlyRightContent 1`] = `
<DocumentFragment>
  <div
    class="css-1gzl4dy"
    data-testid="header"
  >
    <div
      class="css-1k3povc"
    >
      <div
        class="css-17xejub"
      />
      <div
        data-testid="right-content"
      >
        <h1>
          Right
        </h1>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
